# whisper_transcriber

./: README.md  TODO.md  pyproject.toml  requirements.txt
src/: main.py
src/transcription/: transcriber.py
src/utils/: cleaner.py  helpers.py
